# datongzi-rules

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODECOV_SETUP.md  GAME_RULE.md  GITHUB_SETUP.md  LICENSE  NAME_CONVENTION.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PHASE_5_COMPLETION.md  PHASE_5_REPORT.md  README.md  RULE_COMPLIANCE_ANALYSIS.md  RULE_FIX_SUMMARY.md  RUST_MIGRATION_COMPLETE.md  pyproject.toml  run.py
.github/workflows/: cross-language-tests.yml  python-ci.yml  rust-ci.yml
docs/: ALGORITHM_DESIGN.md  KICKER_SELECTION_ALGORITHM.md
examples/: ai_player_demo.py  basic_usage.py  complete_game_simulation.py
openspec/: project.md
openspec/changes/add-rust-implementation/: README.md  SUMMARY.md  design.md  proposal.md  tasks.md
python/: pyproject.toml
python/examples/: complete_game_simulation.py
python/src/datongzi_rules/: __init__.py
python/src/datongzi_rules/ai_helpers/: __init__.py  hand_pattern_analyzer.py  play_generator.py
python/src/datongzi_rules/models/: __init__.py  card.py  config.py
python/src/datongzi_rules/patterns/: __init__.py  finders.py  recognizer.py  validators.py
python/src/datongzi_rules/scoring/: __init__.py  computation.py
python/src/datongzi_rules/simulation/: game_simulator.py
python/src/datongzi_rules/variants/: config_factory.py
python/tests/benchmark/: test_performance.py
python/tests/integration/: test_full_game_flow.py  test_game_simulation.py
python/tests/unit/: test_ai_helpers.py  test_basic.py  test_hand_pattern_analyzer.py  test_models.py  test_pattern_finders.py  test_pattern_validators.py  test_patterns.py  test_patterns_advanced.py  test_scoring.py  test_scoring_round_based.py  test_scoring_rule_compliance.py  test_variants.py
rust/: .gitignore  Cargo.toml  README.md  USAGE_EXAMPLE.md
rust/datongzi-rules/: Cargo.toml
rust/datongzi-rules/src/: error.rs  lib.rs
rust/datongzi-rules/src/ai_helpers/: hand_pattern_analyzer.rs  identical_play_filter.rs  kicker.rs  mod.rs  play_generator.rs
rust/datongzi-rules/src/models/: card.rs  config.rs  mod.rs
rust/datongzi-rules/src/patterns/: mod.rs  pattern.rs  recognizer.rs
rust/datongzi-rules/src/scoring/: computation.rs  mod.rs
rust/datongzi-rules/src/variants/: config_factory.rs  mod.rs
rust/datongzi-rules/tests/: basic.rs  scoring_integration.rs  test_ai3_scenario.rs  test_bomb_beats_triple.rs  test_bomb_dup_suit.rs  test_complex_rules_integration.rs  test_hand_pattern_analyzer.rs  test_models_boundary.rs  test_patterns_boundary.rs  test_play_generator.rs  test_play_generator_combinatorial_explosion.rs  test_rule_updates.rs  test_scenario_606.rs  test_scoring_ai_variants_boundary.rs  test_tongzi_vs_bomb.rs
src/datongzi_rules/: __init__.py
src/datongzi_rules/ai_helpers/: __init__.py  hand_evaluator.py  pattern_suggester.py  play_generator.py
src/datongzi_rules/models/: __init__.py
src/datongzi_rules/patterns/: __init__.py  finders.py  recognizer.py  validators.py
src/datongzi_rules/scoring/: __init__.py  engine.py
src/datongzi_rules/simulation/: __init__.py  game_simulator.py
src/datongzi_rules/variants/: __init__.py  config_factory.py
tests/benchmark/: test_performance.py
tests/cross-language/: README.md  results_python.json  run_tests.py  test_cases.json
tests/integration/: test_full_game_flow.py  test_game_simulation.py
tests/unit/: test_ai_helpers.py  test_models.py  test_pattern_finders.py  test_pattern_validators.py  test_patterns.py  test_patterns_advanced.py  test_scoring.py  test_scoring_rule_compliance.py  test_variants.py
