[workspace]
resolver = "2"
members = [
    "datongzi-rules",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Da Tong Zi Rules Engine Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/datongzi-rules"

[workspace.dependencies]
# Core dependencies (shared across all crates)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
